2026-01-29_egd_kubernetes/lab0/workspace/example/backend_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  annotations:
    app.openshift.io/connects-to: |
      [{"apiVersion":"apps/v1","kind":"StatefulSet","name":"redis"}]
spec:
  revisionHistoryLimit: 0
  replicas: 4
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend
      containers:
        - name: backend
          image: ghcr.io/ondrejsika/counter
          ports:
            - name: http
              containerPort: 8000
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 40Mi
          startupProbe:
            httpGet:
              path: /readyz
              port: http
          livenessProbe:
            httpGet:
              path: /livez
              port: http
