2026-01-29_egd_kubernetes/lab0/workspace/example/redis_sts.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  volumeClaimTemplates:
    - metadata:
        name: redis
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: redis
          image: redis:8
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis
              mountPath: /data
          resources:
            requests:
              cpu: 50m
              memory: 20Mi
            limits:
              cpu: 100m
              memory: 50Mi
