2026-01-29_egd_kubernetes/lab0/workspace/example/backup_web_server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backup-server
spec:
  selector:
    matchLabels:
      app: backup-server
  template:
    metadata:
      labels:
        app: backup-server
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: backup
      containers:
        - name: nginx
          image: sikalabs/nginx-public
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: backup-server
spec:
  selector:
    app: backup-server
  ports:
    - port: 80
