2026-01-29_egd_kubernetes/lab0/workspace/example/frontend_ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - counter.egd.sikademo.com
      secretName: frontend-tls
  rules:
    - host: counter.egd.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
