2026-01-29_egd_kubernetes/lab0/workspace/example/redis_netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis
spec:
  podSelector:
    matchLabels:
      app: redis
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend
        - podSelector:
            matchLabels:
              job: migrations
        - podSelector:
            matchLabels:
              job: backup
      ports:
        - protocol: TCP
          port: 6379
  egress: []
